herpderp fixed some more things

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
+    <title>Natt's scraper</title>
     <style>
       body { background-color: #F2F6D0 }
       #wrapper {
@@ -37,13 +37,15 @@
     </style>
   </head>
   <body>
+    <button id="scrape" type="button">Scrape</button>
     <div id="wrapper">
-      <h1>Note Scraper</h1>
-      <h2><i>If you can do this...the homework should be no problem.</i></h2>
+      <h1>Natt's Scraper</h1>
+
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>    
     <script src="app.js"></script>
   </body>
 </html>
